# api/controllers/prebookings.js
@@ -8,14 +8,15 @@ module.exports = {
 
 function prebook (req, res) {
   var prebooking = [{
-    preBookingId: '2001',
+    prebookingId: '2001',
     description: 'Fahrt von Bern nach Thun am 14.01.2017 20:04 für 22 CHF',
     _links: {
-        'self': {
-            href: 'prebookings/2001'
-        }, 'confirm': {
-            title: 'Billette zur Buchung holen', href: 'api/prebookings/2001/confirm'
-        }
+      'self': {
+        href: 'prebookings/2001'
+      },
+      'confirm': {
+        title: 'Billette zur Buchung holen', href: 'api/prebookings/2001/confirm'
+      }
     }
   }]
   res.json(prebooking)
