# api/swagger/swagger.yaml
@@ -311,17 +311,17 @@ paths:
         200:
           description: "The pre-booked offer."
           schema:
-            $ref: '#/definitions/preBook'
+            $ref: '#/definitions/prebook'
         default:
           description: "unexpected error"
 
-  /prebookings/{preBookingId}/confirm:
+  /prebookings/{prebookingId}/confirm:
     x-swagger-router-controller: bookings
     get:
       description: "Book the pre-booked offer."
       operationId: confirm
       parameters:
-        - name: preBookingId
+        - name: prebookingId
           in: path
           description: "The pre-book ID to be booked."
           required: true
@@ -539,19 +539,19 @@ definitions:
     type: object
     required:
       - self
-      - preBook
+      - prebook
     properties:
       self:
         $ref: '#/definitions/uri'
-      preBook:
+      prebook:
         $ref: '#/definitions/uri'
 
-  preBook:
+  prebook:
     type: object
     required:
-     - preBookingId
+     - prebookingId
     properties:
-      preBookingId:
+      prebookingId:
         description: "ID of the pre-booked offer."
         type: string
         default: '2001'
@@ -559,9 +559,9 @@ definitions:
         description: "Description of the pre-booked offer."
         type: string
       _links:
-        $ref: '#/definitions/preBook_links'
+        $ref: '#/definitions/prebook_links'
 
-  preBook_links:
+  prebook_links:
     type: object
     required:
       - self
